# krunker-rs

./: Cargo.toml  README.md  documentation.md  main.py
examples/: fetch_player.rs  fetch_post.rs  fetch_ranked_history.rs  global_leaderboard.rs  last_5_games.rs
src/: api.rs  client.rs  error.rs  lib.rs  test.rs  types.rs
