[package]
name = "krunker-rs"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.16"
reqwest = { version = "0.12.12", features = ["json"] }
bytes = "1.10.0"
humantime = "2.3.0"
tokio = { version = "1.49.0", features = ["full"] }
